@@ -4,9 +4,9 @@ plugins {
 }
 
 java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(17)
-    }
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(17)
+  }
 }
 
 // tag::repositories[]
@@ -23,7 +23,7 @@ repositories {
 dependencies {
     testImplementation group: 'com.github.hmcts', name: 'ccd-test-definitions', version: '7.0.0'
     testImplementation group: 'com.github.hmcts', name: 'befta-fw', version: '8.7.11'
-    testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.3.0'
+    testImplementation 'com.github.hmcts:fortify-client:1.3.0:all'
 }
 // end::dependencies[]
 
@@ -41,12 +41,12 @@ sourceSets {
 }
 
 configurations {
-    aatCompile.extendsFrom(testCompile)
+    aatImplementation.extendsFrom(testImplementation)
     cucumberRuntime.extendsFrom(functionalRuntime)
 }
 
 tasks.register('fortifyScan', JavaExec)  {
-    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+    mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
     classpath += sourceSets.test.runtimeClasspath
     jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
     // The line below prevents the build from failing
@@ -55,7 +55,7 @@ tasks.register('fortifyScan', JavaExec)  {
 }
 
 tasks.register('highLevelDataSetup', JavaExec) {
-    main = "uk.gov.hmcts.ccd.caseactivity.befta.HighLevelDataSetupApp"
+    mainClass = "uk.gov.hmcts.ccd.caseactivity.befta.HighLevelDataSetupApp"
     classpath += configurations.cucumberRuntime + sourceSets.aat.runtimeClasspath
     jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
@@ -70,6 +70,7 @@ tasks.register('smoke', Test) {
     javaexec {
       main = "uk.gov.hmcts.ccd.caseactivity.befta.CaseActivityBeftaMain"
       classpath += configurations.cucumberRuntime + sourceSets.aat.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
+      jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
       args = ['--plugin', "json:${rootDir}/target/cucumber.json", '--tags', '@Smoke', '--glue',
               'uk.gov.hmcts.befta.player', 'src/resources/features']
     }
@@ -96,6 +97,7 @@ tasks.register('functional', Test) {
     javaexec {
       main = "uk.gov.hmcts.ccd.caseactivity.befta.CaseActivityBeftaMain"
       classpath += configurations.cucumberRuntime + sourceSets.aat.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
+      jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
       args = ['--plugin', "json:${rootDir}/target/cucumber.json", '--tags', 'not @Ignore', '--glue',
               'uk.gov.hmcts.befta.player', 'src/resources/features']
     }
